# authentik-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml.example  makefile  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
core/: auth.py  middleware.py  security.py  utils.py
demo/: mock_authentik.py  mockup.py
docs/: mkdocs.yml  nohup.out
docs/docs/: api.md  cli.md  configuration.md  development.md  emails.md  faq.md  getting-started.md  index.md  security-privacy.md  troubleshooting.md
docs/docs/guides/: invites.md  membership.md
routers/: invites.py  membership.py  pages.py  public.py  users.py
services/: authentik.py  brand.py  build.py
tests/: conftest.py  test_app_import.py  test_auth_enabled.py  test_build.py  test_cli.py  test_demote_bulk_errors.py  test_email_unit.py  test_error_handlers.py  test_invites.py  test_membership.py  test_membership_access.py  test_membership_errors.py  test_membership_mail_paths.py  test_membership_no_email_path.py  test_public.py  test_public_auth_flow.py  test_public_routes.py  test_pwa_routes.py  test_security_unit.py  test_services_authentik_errors.py  test_services_authentik_unit.py  test_trusted_hosts.py  test_users.py  test_utils.py
tools/: __init__.py  cli.py  logging_config.py  mailer.py  settings.py
web/: app_factory.py  error_handlers.py  templates.py
web/static/: app.css  manifest.webmanifest
web/templates/: _base.html  index.html  invitation_email.html  login.html  promotion_email.html
(+8 files in other folders)
